src/types/tests/snapshots/tgbot__types__tests__message__copy_message-2.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "allow_paid_broadcast": true,
  "caption": "caption",
  "chat_id": 1,
  "direct_messages_topic_id": 1,
  "disable_notification": true,
  "from_chat_id": 2,
  "message_effect_id": "test",
  "message_id": 3,
  "message_thread_id": 1,
  "protect_content": true,
  "reply_markup": {
    "force_reply": true
  },
  "reply_parameters": {
    "message_id": 1
  },
  "show_caption_above_media": true,
  "suggested_post_parameters": {},
  "video_start_timestamp": 200
}
