src/types/tests/snapshots/tgbot__types__tests__message__copy_messages-2.snap
---
source: src/types/tests/message.rs
expression: actual_data
---
{
  "chat_id": 1,
  "disable_notification": true,
  "from_chat_id": 2,
  "message_ids": [
    3
  ],
  "message_thread_id": 1,
  "protect_content": true,
  "remove_caption": true
}
